Fixed image overlap

--- a/frontend/src/Status.module.css
+++ b/frontend/src/Status.module.css
@@ -9,6 +9,7 @@
     padding: 10px 25px;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 1px #888888;
+    z-index: 1;
 }
 
 .bold {
